[gd_scene load_steps=8 format=3 uid="uid://dedyg7lu2i37l"]

[ext_resource type="Script" path="res://book/2D/page_2d.gd" id="1_k4lbg"]
[ext_resource type="Script" path="res://book/2D/content_element_grid_container.gd" id="3_4m0nv"]
[ext_resource type="AudioStream" uid="uid://4ar4iutoj3mp" path="res://assets/scribble.mp3" id="3_kdt1c"]

[sub_resource type="Gradient" id="Gradient_a3lb6"]
offsets = PackedFloat32Array(0.935065, 1)
colors = PackedColorArray(0.985482, 0.711203, 0.382095, 1, 0.94716, 0.6216, 0.175202, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ca13k"]
gradient = SubResource("Gradient_a3lb6")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_p0sib"]
offsets = PackedFloat32Array(0, 0.800325)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r1omc"]
gradient = SubResource("Gradient_p0sib")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[node name="Page2d" type="Node2D"]
script = ExtResource("1_k4lbg")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -512.0
offset_top = -808.96
offset_right = 512.0
offset_bottom = 808.96
texture = SubResource("GradientTexture2D_ca13k")

[node name="PageNumberL" type="Label" parent="."]
offset_left = -458.0
offset_top = 706.0
offset_right = -418.0
offset_bottom = 773.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48

[node name="PageNumberR" type="Label" parent="."]
offset_left = 418.0
offset_top = 706.0
offset_right = 458.0
offset_bottom = 729.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48

[node name="ContentElementGridContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -715.0
offset_right = 412.0
offset_bottom = 715.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "test"
mouse_filter = 1
script = ExtResource("3_4m0nv")

[node name="MousePointerShadow" type="TextureRect" parent="."]
offset_left = -128.0
offset_top = -251.0
offset_right = -118.0
offset_bottom = -241.0
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_r1omc")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kdt1c")
volume_db = -20.0
